--- a/views/login.html.twig
+++ b/views/login.html.twig
@@ -1,25 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Martin</title>
-  <link rel="stylesheet" href="/assets/style.css" />
-</head>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Martin</title>
+        <link rel="stylesheet" href="/assets/style.css" />
+    </head>
 
-<body>
+    <body>
+        <div class="container">
+            <div class="form-box active" id="login-form">
+                <form action="/login" method="POST">
+                    <h2>Login</h2>
+                    {% if errorsCredentials is defined %}
+                    <div class="errorCredential">
+                        {{ errorsCredentials }}
+                    </div>
+                    {% endif %}
+                    <input
+                        name="email"
+                        placeholder="Email"
+                        value="{% if input.email is defined %}{{
+                            input.email
+                        }}{% endif %}"
+                    />
+                    {% if errors.email is defined %}
+                    <div class="error">
+                        {{ errors.email }}
+                    </div>
+                    {% endif %}
 
-  <div class="container">
-      <div class="form-box active" id="login-form">
-        <form action="">
-          <h2>Login</h2>
-          <Input type="email" name="email" placeholder="Email" required>
-          <Input type="password" name="password" placeholder="Password" required>
-          <button type ="submit" name="Login">Login</button>  
-        </form>
-      </div>
-  </div>
-
-</body>
+                    <input
+                        type="password"
+                        name="password"
+                        placeholder="Password"
+                        value="{% if input.password is defined %}{{
+                            input.password
+                        }}{% endif %}"
+                    />
+                    {% if errors.password is defined %}
+                    <div class="error">
+                        {{ errors.password }}
+                    </div>
+                    {% endif %}
+                    <button type="submit" name="Login">Login</button>
+                </form>
+            </div>
+        </div>
+    </body>
 </html>
-
