(feat: Lela) updated products page, added user page

--- a/views/product.html.twig
+++ b/views/product.html.twig
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Products</title>
-    <link rel="stylesheet" href="/assets/style.css">
+    <link rel="stylesheet" href="/assets/style3products.css">
 </head>
 <body class="main-body">
     <div class="container">
@@ -118,7 +118,7 @@
                 </div>
             </div>
         </div>
-        
+
             <div class="content-grid">
                 <div class="product-information">
                     <h2 class="section-title">Product Information</h2>
