--- a/assets/style.css
+++ b/assets/style.css
@@ -7,6 +7,11 @@
   font-family: "Poppins", serif;
 }
 
+a {
+    text-decoration: none !important;
+    color: inherit;
+}
+
 /*login page*/
 .login-body{
   display: flex;
