--- a/views/user.html.twig
+++ b/views/user.html.twig
@@ -223,14 +223,22 @@
                                                     >
                                                 </button>
                                             </a>
-                                            <button
-                                                class="btn-action delete"
-                                                title="Delete"
+                                            <form
+                                                method="POST"
+                                                action="/user/{{
+                                                    user.id
+                                                }}/delete"
+                                                onsubmit="return confirm('Are you sure you want to delete this user?');"
                                             >
-                                                <span class="icon-trash"
-                                                    >🗑️</span
+                                                <button
+                                                    class="btn-action delete"
+                                                    title="Delete"
                                                 >
-                                            </button>
+                                                    <span class="icon-trash"
+                                                        >🗑️</span
+                                                    >
+                                                </button>
+                                            </form>
                                         </div>
                                     </td>
                                     {% endfor %}
